--- a/style.scss
+++ b/style.scss
@@ -21,19 +21,22 @@ ul,
 ol {
   list-style-type: none;
 }
+
 p,
 li {
   text-align: justify;
 }
+
 img {
   max-width: 100%;
 }
+
 a {
   cursor: pointer;
 }
+
 body {
-  font-family: "Helvetica Neue", "Arial", "Noto Sans",
-    "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Meiryo", sans-serif;
+  font-family: "Helvetica Neue", Arial, "Noto Sans", "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
@@ -44,19 +47,20 @@ body {
 
 h1 {
   margin-top: 32px;
-  text-align: center;
   font-size: 18px;
   font-weight: 600;
+  text-align: center;
 }
+
 .calculator {
-  box-shadow: 4px 4px 32px #ccc, -4px 4px 32px #ccc, -4px -2px 32px #ccc,
-    4px -2px 32px #ccc;
-  background: var(--color-theme-black);
   width: 480px;
-  margin-inline: auto;
   padding: 64px;
+  margin-inline: auto;
   margin-top: 32px;
+  background: var(--color-theme-black);
   border-radius: 12px;
+  box-shadow: 4px 4px 32px #ccc, -4px 4px 32px #ccc, -4px -2px 32px #ccc, 4px -2px 32px #ccc;
+
   &__form {
     display: flex;
     flex-direction: column;
@@ -65,20 +69,24 @@ h1 {
   }
 
   $_btn-gap: 8px;
+
   &__buttons-wrapper {
     display: flex;
     flex-direction: column;
     gap: $_btn-gap;
   }
+
   &__buttons-outer {
     display: flex;
     gap: $_btn-gap;
   }
+
   &__num-buttons {
     display: flex;
     flex-wrap: wrap-reverse;
     gap: $_btn-gap;
   }
+
   &__operator-buttons {
     display: flex;
     flex-direction: column;
@@ -86,46 +94,47 @@ h1 {
   }
 
   &__button {
+    position: relative;
     width: 80px;
     padding: 8px 12px 10px;
-    text-align: center;
-    color: #fff;
-    border-radius: 8px;
-    font-weight: 600;
-    font-size: 24px;
     font-family: monospace;
-    position: relative;
+    font-size: 24px;
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    border-radius: 8px;
+
     &::after {
+      position: absolute;
+      right: 8px;
+      bottom: 2px;
       font-size: 12px;
       color: #fff8;
-      position: absolute;
-      bottom: 2px;
-      right: 8px;
       content: attr(data-key);
     }
 
     &::before {
-      content: "";
+      position: absolute;
       inset: 0;
       z-index: 1;
-      opacity: 0;
-      position: absolute;
-      border-radius: 8px;
+      content: "";
       background: transparent;
+      border-radius: 8px;
+      opacity: 0;
     }
 
     &:focus {
       &::before {
-        opacity: 0.2;
         background: #fff;
+        opacity: 0.2;
       }
     }
 
     @media (hover: hover) {
       &:hover {
         &::before {
-          opacity: 0.2;
           background: #fff;
+          opacity: 0.2;
         }
       }
     }
@@ -140,6 +149,7 @@ h1 {
     &--num {
       background: var(--color-theme-blue);
     }
+
     &--control {
       background: var(--color-theme-light-blue);
     }
@@ -147,27 +157,29 @@ h1 {
     &--operator {
       background: var(--color-theme-pink);
     }
+
     &--action {
-      background: var(--color-theme-aqua);
       width: 100%;
+      background: var(--color-theme-aqua);
     }
   }
 
   &__operator {
-    cursor: pointer;
-    width: 48px;
-    height: 48px;
-    border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    background: #a6c0d6;
-    color: #fff;
-    font-size: 32px;
-    line-height: 32px;
-    font-weight: 600;
+    width: 48px;
+    height: 48px;
     padding-bottom: 6px;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 32px;
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+    background: #a6c0d6;
+    border-radius: 100%;
+
     &:focus {
       border: 2px solid #2176ff;
     }
@@ -180,43 +192,48 @@ h1 {
   }
 
   &__result {
-    font-family: Rationale, monospace;
-    height: 80px;
-    border-radius: 4px;
-    border-bottom: 2px solid #888;
-    line-height: 14px;
-    width: 100%;
-    background: var(--color-theme-navy);
-    overflow-x: hidden;
     position: relative;
+    width: 100%;
+    height: 80px;
+    overflow-x: hidden;
+    font-family: Rationale, monospace;
+    line-height: 14px;
+    background: var(--color-theme-navy);
+    border-bottom: 2px solid #888;
+    border-radius: 4px;
   }
+
   &__result-inner {
-    white-space: nowrap;
     position: absolute;
     right: 8px;
     bottom: 4px;
     display: block;
+    height: 48px;
     font-size: 48px;
     line-height: 48px;
-    height: 48px;
-    text-align: right;
     color: var(--color-theme-pale-orange);
+    text-align: right;
+    white-space: nowrap;
   }
 
   &__log {
-    margin-top: 4px;
     padding-right: 12px;
-    line-height: 20px;
+    margin-top: 4px;
     font-size: 20px;
+    line-height: 20px;
     color: var(--color-gray);
     text-align: right;
     white-space: nowrap;
+
     > span:nth-of-type(35) {
       display: none;
+
       ~ span {
         display: none;
+
         &:last-child {
           display: inline-block;
+
           &::before {
             content: "…";
           }
@@ -230,19 +247,21 @@ h1 {
   $_sw: 2px;
   $_r2: 1.4142px;
 
-  line-height: 48px;
   display: inline-block;
+  line-height: 48px;
+
   &--root {
-    color: transparent;
     position: relative;
+    color: transparent;
+
     &::before {
       position: absolute;
-      display: block;
       top: 0;
       left: 0;
-      content: "";
+      display: block;
       width: 36px;
       height: 48px;
+      content: "";
       background: var(--color-theme-pale-orange);
       clip-path: polygon(
         0 32px,
@@ -257,6 +276,7 @@ h1 {
         2px 34px
       );
     }
+
     + .calc-unit--number,
     + .calc-unit--one,
     + .calc-unit--zero,
@@ -264,19 +284,21 @@ h1 {
       margin-left: -20px;
     }
   }
+
   &--number[data-root="true"],
   &--one[data-root="true"],
   &--dot[data-root="true"],
   &--zero[data-root="true"] {
     position: relative;
+
     &::before {
       position: absolute;
-      content: "";
+      top: 0;
+      right: 0;
+      left: 0;
       display: block;
       height: $_sw;
-      top: 0;
-      left: 0;
-      right: 0;
+      content: "";
       background: var(--color-theme-pale-orange);
     }
   }
@@ -291,21 +313,24 @@ h1 {
 .calculator__log {
   .calc-unit {
     line-height: 20px;
+
     &--root {
       width: 32px;
+
       &::before {
-        transform: translate(-9px, -14px) scale(0.45);
         background: var(--color-gray);
+        transform: translate(-9px, -14px) scale(0.45);
       }
     }
+
     &--number[data-root="true"],
     &--one[data-root="true"],
     &--dot[data-root="true"],
     &--zero[data-root="true"] {
       &::before {
-        background: var(--color-gray);
-        height: 1px;
         top: -1px;
+        height: 1px;
+        background: var(--color-gray);
       }
     }
   }
